// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden master — demo data > analysis of example.json is unchanged 1`] = `
{
  "anomalies": [
    {
      "description": "The tachograph lost its power supply.",
      "icon": "mdi-alert-circle",
      "message": "Power supply interruption",
      "severity": "warning",
      "ts": 1764771720,
      "type": "event",
    },
    {
      "description": "The driver card was inserted while the vehicle was already moving.",
      "icon": "mdi-alert-circle",
      "message": "Card insertion while driving",
      "severity": "warning",
      "ts": 1765524600,
      "type": "event",
    },
    {
      "description": "The vehicle was driven without a valid driver card inserted.",
      "icon": "mdi-alert-circle",
      "message": "Driving without appropriate card",
      "severity": "warning",
      "ts": 1765789200,
      "type": "event",
    },
    {
      "description": "Part of this day has no recorded activity — a gap within the card data for that day.",
      "icon": "mdi-clock-alert-outline",
      "message": "{time} unaccounted time on {date}",
      "messageParams": {
        "date": "23/12/2025",
        "time": "11h 4m",
      },
      "severity": "info",
      "ts": 1766448000,
      "type": "unaccounted",
    },
    {
      "description": "Part of this day has no recorded activity — a gap within the card data for that day.",
      "icon": "mdi-clock-alert-outline",
      "message": "{time} unaccounted time on {date}",
      "messageParams": {
        "date": "27/12/2025",
        "time": "9h 58m",
      },
      "severity": "info",
      "ts": 1766793600,
      "type": "unaccounted",
    },
    {
      "description": "The tachograph lost its power supply.",
      "icon": "mdi-alert-circle",
      "message": "Power supply interruption",
      "severity": "warning",
      "ts": 1768063500,
      "type": "event",
    },
    {
      "description": "The tachograph lost its power supply.",
      "icon": "mdi-alert-circle",
      "message": "Power supply interruption",
      "severity": "warning",
      "ts": 1769580600,
      "type": "event",
    },
    {
      "description": "No card activity was recorded on these days — the driver card was likely not inserted (e.g. days off).",
      "icon": "mdi-calendar-remove",
      "message": "{count} day(s) missing between {from} and {to}",
      "messageParams": {
        "count": 14,
        "from": "31/01/2026",
        "to": "15/02/2026",
      },
      "severity": "warning",
      "ts": 1769904000,
      "type": "gap",
    },
    {
      "description": "Integrity check of data stored in the tachograph/card failed (possible corruption or tampering).",
      "icon": "mdi-shield-alert",
      "message": "Stored data integrity error",
      "severity": "critical",
      "ts": 1771567200,
      "type": "event",
    },
    {
      "description": "The vehicle was driven without a valid driver card inserted.",
      "icon": "mdi-alert-circle",
      "message": "Driving without appropriate card",
      "severity": "warning",
      "ts": 1771650000,
      "type": "event",
    },
  ],
  "dailyDriving": [
    {
      "code": "6.1",
      "dayTs": 1764806400,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds the extended 10h limit",
      "messageParams": {
        "time": "11h",
      },
      "minutes": 660,
      "severity": "serious",
      "type": "daily-driving",
    },
    {
      "code": "6.1",
      "dayTs": 1765843200,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds the extended 10h limit",
      "messageParams": {
        "time": "15h",
      },
      "minutes": 900,
      "severity": "very-serious",
      "type": "daily-driving",
    },
    {
      "code": "6.1",
      "dayTs": 1771286400,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds the extended 10h limit",
      "messageParams": {
        "time": "10h 30m",
      },
      "minutes": 630,
      "severity": "minor",
      "type": "daily-driving",
    },
    {
      "code": "6.1",
      "dayTs": 1771459200,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds 9h (extension already used twice this week)",
      "messageParams": {
        "time": "11h 30m",
      },
      "minutes": 690,
      "severity": "very-serious",
      "type": "daily-driving",
    },
  ],
  "dailyRest": [
    {
      "code": "8.2",
      "dayTs": 1765843200,
      "icon": "mdi-sleep",
      "message": "Daily rest {time} below minimum 9h",
      "messageParams": {
        "time": "5h",
      },
      "minutes": 300,
      "severity": "most-serious",
      "type": "daily-rest",
      "uncertain": false,
    },
    {
      "code": "8.2",
      "dayTs": 1771459200,
      "icon": "mdi-sleep",
      "message": "Reduced daily rest {time} — more than 3 since last weekly rest",
      "messageParams": {
        "time": "10h",
      },
      "minutes": 600,
      "severity": "uncategorized",
      "type": "daily-rest-reduced",
    },
    {
      "code": "8.2",
      "dayTs": 1771545600,
      "icon": "mdi-sleep",
      "message": "Reduced daily rest {time} — more than 3 since last weekly rest",
      "messageParams": {
        "time": "10h",
      },
      "minutes": 600,
      "severity": "uncategorized",
      "type": "daily-rest-reduced",
    },
    {
      "code": "8.2",
      "dayTs": 1771632000,
      "icon": "mdi-sleep",
      "message": "Daily rest {time} below minimum 9h",
      "messageParams": {
        "time": "6h",
      },
      "minutes": 360,
      "severity": "most-serious",
      "type": "daily-rest",
      "uncertain": false,
    },
  ],
  "dayViolations": [
    {
      "code": "7",
      "endMin": 695,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "5h 10m",
      },
      "minutes": 310,
      "severity": "serious",
      "startMin": 385,
      "type": "continuous-driving",
    },
    {
      "code": "7",
      "endMin": 690,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "6h 30m",
      },
      "minutes": 390,
      "severity": "very-serious",
      "startMin": 300,
      "type": "continuous-driving",
    },
    {
      "code": "7",
      "endMin": 1380,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "7h",
      },
      "minutes": 420,
      "severity": "very-serious",
      "startMin": 930,
      "type": "continuous-driving",
    },
    {
      "code": "7",
      "endMin": 1015,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "11h",
      },
      "minutes": 660,
      "severity": "very-serious",
      "startMin": 320,
      "type": "continuous-driving",
    },
  ],
  "usageErrors": [
    {
      "code": "EU165 34.7",
      "icon": "mdi-map-marker-off",
      "message": "Work period start marking missing",
      "severity": "serious",
      "ts": 1771563600,
      "type": "34.7",
    },
    {
      "code": "EU165 34.7",
      "icon": "mdi-map-marker-off",
      "message": "Work period end marking missing",
      "severity": "serious",
      "ts": 1771614000,
      "type": "34.7",
    },
    {
      "code": "EU165 34.7",
      "icon": "mdi-map-marker-off",
      "message": "Work period start marking missing",
      "severity": "serious",
      "ts": 1771650000,
      "type": "34.7",
    },
    {
      "code": "EU165 34.7",
      "icon": "mdi-map-marker-off",
      "message": "Work period end marking missing",
      "severity": "serious",
      "ts": 1771711200,
      "type": "34.7",
    },
  ],
  "weekly": {
    "biweeklyViolations": [
      {
        "code": "6.3",
        "message": "Biweekly driving {time} exceeds 90h limit",
        "messageParams": {
          "time": "97h",
        },
        "minutes": 5820,
        "severity": "minor",
        "type": "biweekly-driving",
        "weekStart": 1771200000,
      },
    ],
    "weeklyViolations": [
      {
        "code": "6.2",
        "message": "Weekly driving {time} exceeds 56h limit",
        "messageParams": {
          "time": "65h",
        },
        "minutes": 3900,
        "severity": "very-serious",
        "totalDriving": 3900,
        "type": "weekly-driving",
        "weekStart": 1771200000,
      },
    ],
  },
  "weeklyRest": [
    {
      "code": "8.6",
      "dayTs": 1771200000,
      "icon": "mdi-calendar-alert",
      "message": "More than 6×24h ({time}) without a weekly rest",
      "messageParams": {
        "time": "158h",
      },
      "minutes": 9480,
      "severity": "very-serious",
      "type": "weekly-rest-interval",
    },
    {
      "code": "8.6",
      "dayTs": 1772409600,
      "icon": "mdi-scale-balance",
      "message": "Reduced weekly rest ({time}) not compensated within 3 weeks",
      "messageParams": {
        "time": "24h",
      },
      "severity": "uncategorized",
      "type": "weekly-rest-compensation",
    },
    {
      "code": "8.6",
      "dayTs": 1772928000,
      "icon": "mdi-calendar-alert",
      "message": "Two reduced weekly rests in a row ({a} then {b}) — one must be regular",
      "messageParams": {
        "a": "24h",
        "b": "24h",
      },
      "minutes": 1440,
      "severity": "most-serious",
      "type": "weekly-rest-pair",
    },
    {
      "code": "8.6",
      "dayTs": 1773532800,
      "icon": "mdi-calendar-alert",
      "message": "Two reduced weekly rests in a row ({a} then {b}) — one must be regular",
      "messageParams": {
        "a": "24h",
        "b": "24h",
      },
      "minutes": 1440,
      "severity": "most-serious",
      "type": "weekly-rest-pair",
    },
    {
      "code": "8.6",
      "dayTs": 1774137600,
      "icon": "mdi-calendar-alert",
      "message": "Two reduced weekly rests in a row ({a} then {b}) — one must be regular",
      "messageParams": {
        "a": "24h",
        "b": "24h",
      },
      "minutes": 1440,
      "severity": "most-serious",
      "type": "weekly-rest-pair",
    },
  ],
}
`;

exports[`golden master — demo data > analysis of example-vu.json is unchanged 1`] = `
{
  "anomalies": [
    {
      "description": "The driver card was inserted while the vehicle was already moving.",
      "icon": "mdi-alert-circle",
      "message": "Card insertion while driving",
      "severity": "warning",
      "ts": 1764826800,
      "type": "event",
    },
    {
      "description": "The tachograph lost its power supply.",
      "icon": "mdi-alert-circle",
      "message": "Power supply interruption",
      "severity": "warning",
      "ts": 1765509120,
      "type": "event",
    },
  ],
  "dailyDriving": [
    {
      "code": "6.1",
      "dayTs": 1764806400,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds the extended 10h limit",
      "messageParams": {
        "time": "11h",
      },
      "minutes": 660,
      "severity": "serious",
      "type": "daily-driving",
    },
    {
      "code": "6.1",
      "dayTs": 1765843200,
      "icon": "mdi-steering",
      "message": "Daily driving {time} exceeds the extended 10h limit",
      "messageParams": {
        "time": "15h",
      },
      "minutes": 900,
      "severity": "very-serious",
      "type": "daily-driving",
    },
  ],
  "dailyRest": [
    {
      "code": "8.2",
      "dayTs": 1765843200,
      "icon": "mdi-sleep",
      "message": "Daily rest {time} below minimum 9h",
      "messageParams": {
        "time": "5h",
      },
      "minutes": 300,
      "severity": "most-serious",
      "type": "daily-rest",
      "uncertain": false,
    },
  ],
  "dayViolations": [
    {
      "code": "7",
      "endMin": 695,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "5h 10m",
      },
      "minutes": 310,
      "severity": "serious",
      "startMin": 385,
      "type": "continuous-driving",
    },
    {
      "code": "7",
      "endMin": 1380,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "7h",
      },
      "minutes": 420,
      "severity": "very-serious",
      "startMin": 930,
      "type": "continuous-driving",
    },
    {
      "code": "7",
      "endMin": 1015,
      "icon": "mdi-steering",
      "message": "Continuous driving {time} exceeds 4h30 limit without 45min break",
      "messageParams": {
        "time": "11h",
      },
      "minutes": 660,
      "severity": "very-serious",
      "startMin": 320,
      "type": "continuous-driving",
    },
  ],
  "usageErrors": [],
  "weekly": {
    "biweeklyViolations": [],
    "weeklyViolations": [],
  },
  "weeklyRest": [],
}
`;

exports[`golden master — demo data > crossReference between driver card and VU is unchanged 1`] = `
[
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 48m",
      "date": "01/12/2025",
      "vuTime": "7h 14m",
    },
    "severity": "warning",
    "ts": 1764547200,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "7h 32m",
      "date": "02/12/2025",
      "vuTime": "6h 47m",
    },
    "severity": "warning",
    "ts": 1764633600,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 43m",
      "date": "03/12/2025",
      "vuTime": "7h 32m",
    },
    "severity": "warning",
    "ts": 1764720000,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 40m",
      "date": "05/12/2025",
      "vuTime": "7h 3m",
    },
    "severity": "warning",
    "ts": 1764892800,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 46m",
      "date": "08/12/2025",
      "vuTime": "7h 10m",
    },
    "severity": "warning",
    "ts": 1765152000,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "5h 51m",
      "date": "09/12/2025",
      "vuTime": "7h",
    },
    "severity": "warning",
    "ts": 1765238400,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "7h 39m",
      "date": "11/12/2025",
      "vuTime": "5h 58m",
    },
    "severity": "warning",
    "ts": 1765411200,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 33m",
      "date": "12/12/2025",
      "vuTime": "6h 50m",
    },
    "severity": "warning",
    "ts": 1765497600,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "7h 38m",
      "date": "15/12/2025",
      "vuTime": "5h 49m",
    },
    "severity": "warning",
    "ts": 1765756800,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 31m",
      "date": "17/12/2025",
      "vuTime": "7h 42m",
    },
    "severity": "warning",
    "ts": 1765929600,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 56m",
      "date": "18/12/2025",
      "vuTime": "7h 38m",
    },
    "severity": "warning",
    "ts": 1766016000,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-alert",
    "message": "{date}: driving time differs — Card: {cardTime}, VU: {vuTime}",
    "messageParams": {
      "cardTime": "6h 17m",
      "date": "19/12/2025",
      "vuTime": "7h 13m",
    },
    "severity": "warning",
    "ts": 1766102400,
    "type": "driving-mismatch",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "21/12/2025",
    },
    "severity": "info",
    "ts": 1766275200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "22/12/2025",
    },
    "severity": "info",
    "ts": 1766361600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "23/12/2025",
    },
    "severity": "info",
    "ts": 1766448000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "24/12/2025",
    },
    "severity": "info",
    "ts": 1766534400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "25/12/2025",
    },
    "severity": "info",
    "ts": 1766620800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "26/12/2025",
    },
    "severity": "info",
    "ts": 1766707200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "27/12/2025",
    },
    "severity": "info",
    "ts": 1766793600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "28/12/2025",
    },
    "severity": "info",
    "ts": 1766880000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "29/12/2025",
    },
    "severity": "info",
    "ts": 1766966400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "30/12/2025",
    },
    "severity": "info",
    "ts": 1767052800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "31/12/2025",
    },
    "severity": "info",
    "ts": 1767139200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "01/01/2026",
    },
    "severity": "info",
    "ts": 1767225600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "02/01/2026",
    },
    "severity": "info",
    "ts": 1767312000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "03/01/2026",
    },
    "severity": "info",
    "ts": 1767398400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "04/01/2026",
    },
    "severity": "info",
    "ts": 1767484800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "05/01/2026",
    },
    "severity": "info",
    "ts": 1767571200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "06/01/2026",
    },
    "severity": "info",
    "ts": 1767657600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "07/01/2026",
    },
    "severity": "info",
    "ts": 1767744000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "08/01/2026",
    },
    "severity": "info",
    "ts": 1767830400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "09/01/2026",
    },
    "severity": "info",
    "ts": 1767916800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "10/01/2026",
    },
    "severity": "info",
    "ts": 1768003200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "11/01/2026",
    },
    "severity": "info",
    "ts": 1768089600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "12/01/2026",
    },
    "severity": "info",
    "ts": 1768176000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "13/01/2026",
    },
    "severity": "info",
    "ts": 1768262400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "14/01/2026",
    },
    "severity": "info",
    "ts": 1768348800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "15/01/2026",
    },
    "severity": "info",
    "ts": 1768435200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "16/01/2026",
    },
    "severity": "info",
    "ts": 1768521600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "17/01/2026",
    },
    "severity": "info",
    "ts": 1768608000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "18/01/2026",
    },
    "severity": "info",
    "ts": 1768694400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "19/01/2026",
    },
    "severity": "info",
    "ts": 1768780800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "20/01/2026",
    },
    "severity": "info",
    "ts": 1768867200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "21/01/2026",
    },
    "severity": "info",
    "ts": 1768953600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "22/01/2026",
    },
    "severity": "info",
    "ts": 1769040000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "23/01/2026",
    },
    "severity": "info",
    "ts": 1769126400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "24/01/2026",
    },
    "severity": "info",
    "ts": 1769212800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "25/01/2026",
    },
    "severity": "info",
    "ts": 1769299200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "26/01/2026",
    },
    "severity": "info",
    "ts": 1769385600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "27/01/2026",
    },
    "severity": "info",
    "ts": 1769472000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "28/01/2026",
    },
    "severity": "info",
    "ts": 1769558400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "29/01/2026",
    },
    "severity": "info",
    "ts": 1769644800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "30/01/2026",
    },
    "severity": "info",
    "ts": 1769731200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "31/01/2026",
    },
    "severity": "info",
    "ts": 1769817600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "15/02/2026",
    },
    "severity": "info",
    "ts": 1771113600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "16/02/2026",
    },
    "severity": "info",
    "ts": 1771200000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "17/02/2026",
    },
    "severity": "info",
    "ts": 1771286400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "18/02/2026",
    },
    "severity": "info",
    "ts": 1771372800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "19/02/2026",
    },
    "severity": "info",
    "ts": 1771459200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "20/02/2026",
    },
    "severity": "info",
    "ts": 1771545600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "21/02/2026",
    },
    "severity": "info",
    "ts": 1771632000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "22/02/2026",
    },
    "severity": "info",
    "ts": 1771718400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "23/02/2026",
    },
    "severity": "info",
    "ts": 1771804800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "24/02/2026",
    },
    "severity": "info",
    "ts": 1771891200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "25/02/2026",
    },
    "severity": "info",
    "ts": 1771977600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "26/02/2026",
    },
    "severity": "info",
    "ts": 1772064000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "27/02/2026",
    },
    "severity": "info",
    "ts": 1772150400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "28/02/2026",
    },
    "severity": "info",
    "ts": 1772236800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "01/03/2026",
    },
    "severity": "info",
    "ts": 1772323200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "02/03/2026",
    },
    "severity": "info",
    "ts": 1772409600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "03/03/2026",
    },
    "severity": "info",
    "ts": 1772496000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "04/03/2026",
    },
    "severity": "info",
    "ts": 1772582400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "05/03/2026",
    },
    "severity": "info",
    "ts": 1772668800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "06/03/2026",
    },
    "severity": "info",
    "ts": 1772755200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "07/03/2026",
    },
    "severity": "info",
    "ts": 1772841600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "08/03/2026",
    },
    "severity": "info",
    "ts": 1772928000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "09/03/2026",
    },
    "severity": "info",
    "ts": 1773014400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "10/03/2026",
    },
    "severity": "info",
    "ts": 1773100800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "11/03/2026",
    },
    "severity": "info",
    "ts": 1773187200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "12/03/2026",
    },
    "severity": "info",
    "ts": 1773273600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "13/03/2026",
    },
    "severity": "info",
    "ts": 1773360000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "14/03/2026",
    },
    "severity": "info",
    "ts": 1773446400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "15/03/2026",
    },
    "severity": "info",
    "ts": 1773532800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "16/03/2026",
    },
    "severity": "info",
    "ts": 1773619200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "17/03/2026",
    },
    "severity": "info",
    "ts": 1773705600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "18/03/2026",
    },
    "severity": "info",
    "ts": 1773792000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "19/03/2026",
    },
    "severity": "info",
    "ts": 1773878400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "20/03/2026",
    },
    "severity": "info",
    "ts": 1773964800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "21/03/2026",
    },
    "severity": "info",
    "ts": 1774051200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "22/03/2026",
    },
    "severity": "info",
    "ts": 1774137600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "23/03/2026",
    },
    "severity": "info",
    "ts": 1774224000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "24/03/2026",
    },
    "severity": "info",
    "ts": 1774310400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "25/03/2026",
    },
    "severity": "info",
    "ts": 1774396800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "26/03/2026",
    },
    "severity": "info",
    "ts": 1774483200,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "27/03/2026",
    },
    "severity": "info",
    "ts": 1774569600,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "28/03/2026",
    },
    "severity": "info",
    "ts": 1774656000,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "29/03/2026",
    },
    "severity": "info",
    "ts": 1774742400,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "30/03/2026",
    },
    "severity": "info",
    "ts": 1774828800,
    "type": "card-only",
  },
  {
    "icon": "mdi-card-account-details",
    "message": "{date}: present in driver card but not in VU data",
    "messageParams": {
      "date": "31/03/2026",
    },
    "severity": "info",
    "ts": 1774915200,
    "type": "card-only",
  },
]
`;
